Added a third marketing section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       p.lead {
         padding-top: 15px;
       }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
+      .navigation, .pitch, .section1, .section2, .section3, .faq, .footer {
         padding: 10px 0px 10px 0px;
       }
       .video, .thermometer, .order, .social {
@@ -79,6 +79,11 @@
       <div class="row section2">
 	<div class="span12">
 	  Marketing Section 2
+	</div>
+      </div>
+      <div class="row section3">
+	<div class="span12">
+	  Marketing Section 3
 	</div>
       </div>
       <div class="row faq">
